--- a/a_login.html
+++ b/a_login.html
@@ -165,7 +165,7 @@
 						};
 						UserInfo.username(loginInfo.username);
 						mui.ajax({
-			    			url:'http://test.wafuli.cn/app/login/',
+			    			url:'http://m.wafuli.cn/app/login/',
 			    			dataType:"json",
 			    			type:"post",
 			    			data:loginInfo,
