--- a/account/m_account_bind_zhifubao.html
+++ b/account/m_account_bind_zhifubao.html
@@ -44,7 +44,7 @@
 					return;
 				}
 				mui.ajax({
-					url: 'http://test.wafuli.cn/app/bind_zhifubao/',
+					url: 'http://m.wafuli.cn/app/bind_zhifubao/',
 					dataType:"json",
 					type:'POST',
 					data : {
