--- a/account/m_account_change_password.html
+++ b/account/m_account_change_password.html
@@ -53,7 +53,7 @@
 						return;
 					}
 					mui.ajax({
-						url: 'http://test.wafuli.cn/app/password_change/',
+						url: 'http://m.wafuli.cn/app/password_change/',
 						dataType:"json",
 						type:'POST',
 						data : {
