--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -83,7 +83,7 @@
 		<script type="text/javascript" src="../js/UserInfo.js"></script>
 		<script>
 			mui.init();
-			var get_charge_url = "http://test.wafuli.cn/app/charge_json/";
+			var get_charge_url = "http://m.wafuli.cn/app/charge_json/";
 			user = UserInfo.userinfo();
 			document.getElementById("balance").innerText = user.balance;
 			document.getElementById('userimg').src = "../images/user-0" + user.userimg + ".png";
