--- a/account/m_account_coupon.html
+++ b/account/m_account_coupon.html
@@ -117,11 +117,11 @@
 	<script src="../js/mui.pullToRefresh.material.js"></script>
 	<script src="../js/UserInfo.js"></script>
 	<script>
-		var get_coupon_url = "http://test.wafuli.cn/account/user_coupon_json/";
-		var use_coupon_url = "http://test.wafuli.cn/account/useCoupon/";
-		var get_coupon_exchange_detail_url = "http://test.wafuli.cn/account/coupondetail/";
+		var get_coupon_url = "http://m.wafuli.cn/account/user_coupon_json/";
+		var use_coupon_url = "http://m.wafuli.cn/account/useCoupon/";
+		var get_coupon_exchange_detail_url = "http://m.wafuli.cn/account/coupondetail/";
 		var coupon_id = 0;
-		var host = "http://test.wafuli.cn";
+		var host = "http://m.wafuli.cn";
 		mui.init();
 		mui.plusReady(function(){
 			mui('.mui-slider-group').on('tap', 'a', function() {
