--- a/account/m_account_exchange.html
+++ b/account/m_account_exchange.html
@@ -122,11 +122,11 @@
 		 * 上拉加载具体业务实现
 		 */
 		var count = 0;
-		var get_commodity_url = "http://test.wafuli.cn/account/commodity_json/";
+		var get_commodity_url = "http://m.wafuli.cn/account/commodity_json/";
 		var good_id = 0;
-		var post_url = "http://test.wafuli.cn/app/submit_order/";
+		var post_url = "http://m.wafuli.cn/app/submit_order/";
 		var self = null;
-		var host = "http://test.wafuli.cn";
+		var host = "http://m.wafuli.cn";
 //		mui.plusReady(function(){
 //				self = plus.webview.currentWebview();
 //				user = self.user;
