--- a/account/m_account_score.html
+++ b/account/m_account_score.html
@@ -93,7 +93,7 @@
 		<script type="text/javascript" charset="UTF-8" src="../js/UserInfo.js"></script>
 		<script>
 			mui.init();
-			var get_score_url = "http://test.wafuli.cn/app/score_json/";
+			var get_score_url = "http://m.wafuli.cn/app/score_json/";
 			user = UserInfo.userinfo();
 			document.getElementById("accu_scores").innerText = user.accu_scores;
 			document.getElementById('userimg').src = "../images/user-0" + user.userimg + ".png";
