--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -83,7 +83,7 @@
 		user = UserInfo.userinfo();
 		document.getElementById("finish_task").innerText = user.tcount_u;
 		document.getElementById("finish_finance").innerText = user.fcount_u;
-		var get_welfare_url = "http://test.wafuli.cn/account/welfare_json/";
+		var get_welfare_url = "http://m.wafuli.cn/account/welfare_json/";
 		(function($) {
 			//阻尼系数
 			var deceleration = mui.os.ios?0.003:0.0009;
