--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -64,7 +64,7 @@
 					document.getElementById("change_zhifubao").innerText = "绑定支付宝账号";
 				}
 			});
-			var withdraw_url = "http://test.wafuli.cn/app/withdraw/";
+			var withdraw_url = "http://m.wafuli.cn/app/withdraw/";
 			document.getElementById("Btn").addEventListener('tap', function() {
 				var amount = document.getElementById("with_amount").value;
 				amount = parseInt(amount);
