--- a/account/m_detail_press.html
+++ b/account/m_detail_press.html
@@ -22,7 +22,7 @@
 			mui.init();
 			var self = null;
 			var sid = null;
-			var url_get_content = "http://test.wafuli.cn/app/detail/press/";
+			var url_get_content = "http://m.wafuli.cn/app/detail/press/";
 			mui.plusReady(function(){
 				self = plus.webview.currentWebview();
 				sid = self.sid;
