--- a/account/m_password_reset.html
+++ b/account/m_password_reset.html
@@ -46,10 +46,10 @@
 				swipeBack:true //启用右滑关闭功能
 			});
 	      	var countdown=60;
-			var coderefresh_url = "http://test.wafuli.cn/captcha/refresh/";
-			var sendtelcode_url = "http://test.wafuli.cn/account/phoneImageV/";
-			var submit_url = "http://test.wafuli.cn/account/password_reset/";
-			var host = "http://test.wafuli.cn";
+			var coderefresh_url = "http://m.wafuli.cn/captcha/refresh/";
+			var sendtelcode_url = "http://m.wafuli.cn/account/phoneImageV/";
+			var submit_url = "http://m.wafuli.cn/account/password_reset/";
+			var host = "http://m.wafuli.cn";
 			mui.getJSON(coderefresh_url, null, function(data) {
 				var new_cptch_key = data.key;
 				var new_cptch_image = data.image_url;
