--- a/account/m_signin.html
+++ b/account/m_signin.html
@@ -127,7 +127,7 @@
 			signin();
   		});
   		function signin(){
-  			var url = "http://test.wafuli.cn/app/signin/";
+  			var url = "http://m.wafuli.cn/app/signin/";
 			mui.ajax({
 				type: "get",
 				url: url,
