--- a/account/m_strategy.html
+++ b/account/m_strategy.html
@@ -75,7 +75,7 @@
 			});
 			mui.ready(function(){
 				mui.ajax({
-					url: 'http://test.wafuli.cn/app/strategy/',
+					url: 'http://m.wafuli.cn/app/strategy/',
 					dataType:"json",
 					type:'GET',
 					success:function(ret){
