--- a/html/m_activity_lottery.html
+++ b/html/m_activity_lottery.html
@@ -163,7 +163,7 @@
 		<script src="../js/rotate-app.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		    mui.init();
-		    var share_href = 'http://test.wafuli.cn/activity/lottery/';
+		    var share_href = 'http://m.wafuli.cn/activity/lottery/';
 			document.getElementById("share").addEventListener('tap',function(){
 		    	share_msg = {};
 				share_msg.title = '豪礼大放送！';
