--- a/html/m_activity_recom_info.html
+++ b/html/m_activity_recom_info.html
@@ -64,7 +64,7 @@
 		var count = 0;
 		function get_record_list(n){
 			mui.ajax({
-				url:"http://test.wafuli.cn/app/activity/recom_info/",
+				url:"http://m.wafuli.cn/app/activity/recom_info/",
 				data:{
 					count:n,
 					token:UserInfo.token(),
