--- a/html/m_activity_recom_submit.html
+++ b/html/m_activity_recom_submit.html
@@ -46,7 +46,7 @@
 				var url = document.getElementById('url').value;
 				var reason = document.getElementById('reason').value;
 				mui.ajax({
-					url:"http://test.wafuli.cn/app/activity/recom_submit/",
+					url:"http://m.wafuli.cn/app/activity/recom_submit/",
 					type:'post',
 					data:{
 						title: title,
