--- a/html/m_activity_recommend.html
+++ b/html/m_activity_recommend.html
@@ -74,7 +74,7 @@
 			});
 		});
 		document.getElementById("share").addEventListener("tap",function(){
-		    var share_href = 'http://test.wafuli.cn/activity/recommend/';
+		    var share_href = 'http://m.wafuli.cn/activity/recommend/';
 	    	share_msg = {};
 			share_msg.title = '独福利不如众福利！';
 			share_msg.content = '分享福利赚现金，得奖品，一切尽在挖福利！';
