--- a/html/m_detail_information.html
+++ b/html/m_detail_information.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" charset="utf-8">
 	    mui.init();
 	    mui.ready(function(){
-	    	var url_get_content= "http://test.wafuli.cn/app/detail/information/";
+	    	var url_get_content= "http://m.wafuli.cn/app/detail/information/";
 	    	var id = localStorage.getItem('temp_info_id');
 	    	var title = localStorage.getItem('temp_info_title');
 	    	document.getElementById('title').innerText = title;
