--- a/html/m_detail_task.html
+++ b/html/m_detail_task.html
@@ -49,8 +49,8 @@
 			var id = '';
 			var exp_url = '';
 			var accepted = null;
-			var url_accept_task = "http://test.wafuli.cn/app/accept_task/";
-			var url_get_accepted = "http://test.wafuli.cn/app/get_user_task_state/";
+			var url_accept_task = "http://m.wafuli.cn/app/accept_task/";
+			var url_get_accepted = "http://m.wafuli.cn/app/get_user_task_state/";
 			var self = null;
 			var tempview = null;
 			mui.plusReady(function(){
@@ -72,7 +72,7 @@
 			  	img = event.detail.img;
 			  	document.getElementById('picture').src = img;
 			  //根据id向服务器请求新闻详情
-		  		var url_get_content= "http://test.wafuli.cn/app/detail/task/";
+		  		var url_get_content= "http://m.wafuli.cn/app/detail/task/";
 		  		mui.ajax({
 					url:url_get_content,
 					dataType:"json",
@@ -110,7 +110,7 @@
 				});
 				window.scrollTo(0, 0);
 				setTimeout(function(){self.show();},100);
-			  	var sss='share_msg.pictures=["' + img + '",];share_msg.thumbs=["' + img + '",];share_msg.href = "http://test.wafuli.cn/task/' + id + '/";';
+			  	var sss='share_msg.pictures=["' + img + '",];share_msg.thumbs=["' + img + '",];share_msg.href = "http://m.wafuli.cn/task/' + id + '/";';
 				self.parent().evalJS(sss);
 			});
 			exp_btn.addEventListener('tap', function() {
