--- a/html/m_expsubmit_finance.html
+++ b/html/m_expsubmit_finance.html
@@ -62,7 +62,7 @@
 					return;
 				}
 				mui.ajax({
-					url:"http://test.wafuli.cn/app/submit_finance/",
+					url:"http://m.wafuli.cn/app/submit_finance/",
 					type:'post',
 					data:{
 						'type':type,
