--- a/html/m_hongbao.html
+++ b/html/m_hongbao.html
@@ -90,9 +90,9 @@
 		<script src="../js/UserInfo.js"></script>
 		<script src="../js/template.js"></script>
 		<script>
-			var host = "http://test.wafuli.cn";
+			var host = "http://m.wafuli.cn";
 			mui.init();
-			var get_hongbao_url = "http://test.wafuli.cn/hongbao_json/";
+			var get_hongbao_url = "http://m.wafuli.cn/hongbao_json/";
 				mui.init();
 
 			var deceleration = mui.os.ios?0.003:0.0009;
