--- a/html/m_information.html
+++ b/html/m_information.html
@@ -69,8 +69,8 @@
 		<script src="../js/mui.pullToRefresh.material.js"></script>
 		<script>
 			mui.init();
-			var get_info_url = "http://test.wafuli.cn/information_json/";
-			var host = "http://test.wafuli.cn";
+			var get_info_url = "http://m.wafuli.cn/information_json/";
+			var host = "http://m.wafuli.cn";
 			var self = null;
 			//阻尼系数
 			var deceleration = mui.os.ios?0.003:0.0009;
