--- a/html/m_youhuiquan.html
+++ b/html/m_youhuiquan.html
@@ -23,7 +23,7 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/template.js"></script>
 		<script>
-			var host = "http://test.wafuli.cn";
+			var host = "http://m.wafuli.cn";
 			mui.init({
 				pullRefresh: {
 					container: '#pullrefresh',
@@ -40,7 +40,7 @@
 		 * 上拉加载具体业务实现
 		 */
 			var count = 0;
-			var get_youhuiquan_url = "http://test.wafuli.cn/youhuiquan_json/";
+			var get_youhuiquan_url = "http://m.wafuli.cn/youhuiquan_json/";
 			function get_wel_list(n){
 				mui.ajax(get_youhuiquan_url,{
 					data:{
