--- a/m_finance.html
+++ b/m_finance.html
@@ -56,8 +56,8 @@
 		<script type="text/javascript" charset="UTF-8" src="js/template.js"></script>
 		<script>
 			var table = document.body.querySelector('.mui-table-view');
-			var get_finance_url = "http://test.wafuli.cn/finance_json";
-			var host = "http://test.wafuli.cn";
+			var get_finance_url = "http://m.wafuli.cn/finance_json";
+			var host = "http://m.wafuli.cn";
 			var count = 0;
 			var template = null;
 			mui.init();
@@ -116,7 +116,7 @@
 										str_block += '<span>' + marks[j] + '</span>';
 									}
 									str_block += '</div><div class="container clearfix">'+
-											'<div><img src="' + wel.picurl + '" />'+
+											'<div><img src="' + host + wel.picurl + '" />'+
 											'</div><div class="inc2">'+
 						                    '<p>官网利息：<number>'+wel.interest+'</number></p>'+
 						                    '<p>补贴收益：<number>+' + wel.benefit +
