--- a/m_task.html
+++ b/m_task.html
@@ -54,8 +54,8 @@
 		<script type="text/javascript" charset="UTF-8" src="js/template.js"></script>
 		<script>
 			var table = document.body.querySelector('.mui-table-view');
-			var get_task_url = "http://test.wafuli.cn/task_json";
-			var host = "http://test.wafuli.cn";
+			var get_task_url = "http://m.wafuli.cn/task_json";
+			var host = "http://m.wafuli.cn";
 			var count = 0;
 			var template = null;
 			mui.init();
