--- a/html/m_activity_recom_rank.html
+++ b/html/m_activity_recom_rank.html
@@ -45,7 +45,7 @@
 		var count = 0;
 		function get_record_list(n){
 			mui.ajax({
-				url:"http://test.wafuli.cn/app/activity/recom_rank/",
+				url:"http://m.wafuli.cn/app/activity/recom_rank/",
 				data:{
 					count:n,
 				},
