--- a/html/m_baoyou.html
+++ b/html/m_baoyou.html
@@ -25,7 +25,7 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script>
-		var host = "http://test.wafuli.cn";
+		var host = "http://m.wafuli.cn";
 		mui.init({
 			pullRefresh: {
 				container: '#pullrefresh',
@@ -42,7 +42,7 @@
 	 * 上拉加载具体业务实现
 	 */
 		var count = 0;
-		var get_baoyou_url = "http://test.wafuli.cn/baoyou_json/";
+		var get_baoyou_url = "http://m.wafuli.cn/baoyou_json/";
 		var tempview = null;
 		mui.plusReady(function(){
 			tempview = plus.webview.getWebviewById("temp2");
