--- a/html/m_expsubmit_task.html
+++ b/html/m_expsubmit_task.html
@@ -278,7 +278,7 @@
 				formdata.append('telnum', telnum);
 				formdata.append('remark', remark);
 				formdata.append('token', UserInfo.token());
-				xhr.open('post', 'http://test.wafuli.cn/app/submit_task/');
+				xhr.open('post', 'http://m.wafuli.cn/app/submit_task/');
 				xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest");
 				document.getElementById("img_mask").style.display = "block";
 				xhr.onreadystatechange = function() {
