--- a/m_finance.html
+++ b/m_finance.html
@@ -15,10 +15,11 @@
 			<div id="finance_slider" class="mui-slider mui-fullscreen">
 				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<a class="mui-control-item" href="#item1">最新</a>
-					<a class="mui-control-item" href="#item2">高收益</a>
-					<a class="mui-control-item" href="#item3">低风险</a>
+					<a class="mui-control-item" href="#item2">新手投资</a>
+					<a class="mui-control-item" href="#item3">稳健投资</a>
+					<a class="mui-control-item" href="#item4">高收益区</a>
 				</div>
-				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
+				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-3"></div>
 				<div class="mui-slider-group">
 					<div id="item1" class="mui-slider-item mui-control-content mui-active" value="1">
 						<div id="scroll1" class="mui-scroll-wrapper">
@@ -37,6 +38,14 @@
 						</div>
 					</div>
 					<div id="item3" class="mui-slider-item mui-control-content" value="3">
+						<div id="scroll1" class="mui-scroll-wrapper">
+							<div class="mui-scroll">
+								<ul class="mui-table-view">
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div id="item4" class="mui-slider-item mui-control-content" value="4">
 						<div id="scroll1" class="mui-scroll-wrapper">
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
