--- a/m_finance.html
+++ b/m_finance.html
@@ -14,10 +14,9 @@
 			<!--选项卡部分-->
 			<div id="finance_slider" class="mui-slider mui-fullscreen">
 				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="#item1">最新</a>
-					<a class="mui-control-item" href="#item2">高收益</a>
-					<a class="mui-control-item" href="#item3">低风险</a>
-					<!--<a class="mui-control-item" href="#item5">优惠券</a>-->
+					<a class="mui-control-item" href="#item1">新手</a>
+					<a class="mui-control-item" href="#item2">稳健投资</a>
+					<a class="mui-control-item" href="#item3">高收益区</a>
 				</div>
 				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
 				<div class="mui-slider-group">
@@ -45,7 +44,6 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 
 			</div>
@@ -117,7 +115,7 @@
 										str_block += '<span>' + marks[j] + '</span>';
 									}
 									str_block += '</div><div class="container clearfix">'+
-											'<div><img src="' + wel.picurl + '" /><span class="mark">' + wel.category + '</span>'+
+											'<div><img src="' + host + wel.picurl + '" /><span class="mark">' + wel.category + '</span>'+
 											'</div><div class="inc2">'+
 						                    '<p>官网利息：<number>'+wel.interest+'</number></p>'+
 						                    '<p>补贴收益：<number>+' + wel.benefit +
