--- a/m_finance.html
+++ b/m_finance.html
@@ -80,7 +80,7 @@
 							callback: function() {
 								var self = this;
 								var ul = self.element.querySelector('.mui-table-view');
-								get_finance_list(this, ul, count++, index);
+								get_finance_list(this, ul, count++, index+1);
 								//		ul.appendChild(createFragment(ul, index, 5));
 								//	self.endPullUpToRefresh(true);
 							}
@@ -115,11 +115,7 @@
 										str_block += '<span>' + marks[j] + '</span>';
 									}
 									str_block += '</div><div class="container clearfix">'+
-<<<<<<< HEAD
 											'<div><img src="' + host + wel.picurl + '" /><span class="mark">' + wel.category + '</span>'+
-=======
-											'<div><img src="' + host + wel.picurl + '" />'+
->>>>>>> 524db25773fb81347052485e73ef0d8850f9dff9
 											'</div><div class="inc2">'+
 						                    '<p>官网利息：<number>'+wel.interest+'</number></p>'+
 						                    '<p>补贴收益：<number>+' + wel.benefit +
