--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -29,7 +29,7 @@
 			</div>
 			<div id="scheme_table" class="taste finance-table">
 				<div class="table-head">
-					<span>投资金融</span><span>投资期限</span><span>挖福利返现</span><span>综合年化收益</span>
+					<span>投资金融</span><span>投资期限</span><span>挖福利返现</span><span>预计年化</span>
 				</div>
 			</div>
 			<!--体验步骤部分-->
