--- a/m_finance.html
+++ b/m_finance.html
@@ -14,7 +14,7 @@
 			<!--选项卡部分-->
 			<div id="finance_slider" class="mui-slider mui-fullscreen">
 				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="#item1">新手</a>
+					<a class="mui-control-item" href="#item1">新手投资</a>
 					<a class="mui-control-item" href="#item2">稳健投资</a>
 					<a class="mui-control-item" href="#item3">高收益区</a>
 				</div>
@@ -115,7 +115,7 @@
 										str_block += '<span>' + marks[j] + '</span>';
 									}
 									str_block += '</div><div class="container clearfix">'+
-											'<div><img src="' + host + wel.picurl + '" /><span class="mark">' + wel.category + '</span>'+
+											'<div><img src="' + host + wel.picurl + '" />'+
 											'</div><div class="inc2">'+
 						                    '<p>官网利息：<number>'+wel.interest+'</number></p>'+
 						                    '<p>补贴收益：<number>+' + wel.benefit +
