--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -136,7 +136,16 @@
 									str_html = '<span class="li-01"><b>' + wel.title +
 										'</b></span><span class="li-02"><number>' + wel.username +
 										'</number></span><span class="li-03"><number>' + wel.time +
-										'</number></span><span class="li-04">' + wel.state;
+										'</number></span>';
+									if (wel.state_int=='2'){
+										str_html += '<span class="li-04 review-refuse" reason="' + wel.reason + '">'+ wel.state + '</span>';
+									}
+									else if(wel.state_int=='0'){
+										str_html += '<span class="li-04 review-pass">' + wel.state + '</span>';
+									}
+									else{
+										str_html += '<span class="li-04">' + wel.state + '</span>';
+									}
 									li.innerHTML = str_html
 									ul.appendChild(li);
 								}
