--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -162,7 +162,8 @@
 	<script type="text/javascript">
 		// 审核拒绝原因弹窗
 		mui('.mui-table-view').on('tap','.review-refuse',function(){
-			mui.alert('支付宝绑定不正确','审未通过原因','确定');
+			var reason = this.getAttribute("reason");
+        	mui.alert(reason,'审核未通过原因','确定');
 		});
 	</script>
 </body>
