--- a/account/m_signin.html
+++ b/account/m_signin.html
@@ -28,7 +28,7 @@
 		        </li>
 		    	<li>
 		        	<a id="m_exchange_morescore.html" class="more-exchange">
-		            <i class="icon iconfont ic-03">&#xe618;</i>
+		            <i class="icon iconfont ic-03">&#xe60c;</i>
 		        	<span>更多积分</span>
 		            </a>
 		        </li>
