--- a/m_account_index.html
+++ b/m_account_index.html
@@ -290,7 +290,7 @@
 				}
 			});
 			function signin(){
-	  			var url = "http://m.wafuli.cn/signin/";
+	  			var url = "http://m.wafuli.cn/app/signin/";
 				mui.ajax({
 					type: "get",
 					url: url,
