--- a/html/m_activity_recom_info.html
+++ b/html/m_activity_recom_info.html
@@ -102,5 +102,12 @@
 			get_record_list(count++);
 		}
     </script>
+    <script type="text/javascript">
+		// 审核拒绝原因弹窗
+		mui('.mui-table-view').on('tap','.review-refuse',function(){
+			var reason = this.getAttribute("reason");
+        	mui.alert(reason,'审核未通过原因','确定');
+		});
+	</script>
 </body>
 </html>
