--- a/account/m_account_coupon.html
+++ b/account/m_account_coupon.html
@@ -283,6 +283,13 @@
 			this.parentNode.parentNode.style.display="none";
 		});
 	</script>
+	<script type="text/javascript">
+		// 审核拒绝原因弹窗
+		mui('.mui-table-view').on('tap','.review-refuse',function(){
+			var reason = this.getAttribute("reason");
+        	mui.alert(reason,'审核未通过原因','确定');
+		});
+	</script>
 </body>
 </html>
 
