--- a/m_welfare.html
+++ b/m_welfare.html
@@ -341,9 +341,9 @@
 					mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
 				});
 				var wvs=plus.webview.all();
-				for(var i=0;i<wvs.length;i++){
-					console.log("webview"+i+": "+wvs[i].id);
-				}
+//				for(var i=0;i<wvs.length;i++){
+//					console.log("webview"+i+": "+wvs[i].id);
+//				}
 			};
 	
 			function clearNewsList() {
