--- a/account/m_account_coupon.html
+++ b/account/m_account_coupon.html
@@ -238,8 +238,16 @@
 							li.className = 'list clearfix';
 							str_html = '<span><number>' + record.type + '</number></span>' +
 								'<span><number>' + record.title + '</number></span>' +
-								'<span><number>' + record.amount + '</number></span>' +
-								'<span><number>' + record.state + '</number></span>';
+								'<span><number>' + record.amount + '</number></span>'; 
+							if (record.state_int=='2'){
+								str_html += '<span class="li-04 review-refuse" reason="' + record.reason + '">'+ record.state + '</span>';
+							}
+							else if(record.state_int=='0'){
+								str_html += '<span class="li-04 review-pass">' + record.state + '</span>';
+							}
+							else{
+								str_html += '<span class="li-04">' + record.state + '</span>';
+							}
 							li.innerHTML = str_html;
 							ul.appendChild(li);
 						}
