--- a/html/m_expsubmit_finance.html
+++ b/html/m_expsubmit_finance.html
@@ -23,11 +23,11 @@
 						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
 					</div>
 					<div class="mui-input-row">
-						<label>投资金额</label>
+						<label>投资金额（元）</label>
 						<input type="text" placeholder="请输入投资金额（仅限数字）" id="amount">
 					</div>
 					<div class="mui-input-row">
-						<label>投资标期</label>
+						<label>投资标期（天）</label>
 						<input type="text" placeholder="请输入投资标期（仅限数字）" id="term">
 					</div>
 
